--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,7 @@
-# Explicitly declare text files you want to always be normalized and converted
-# to native line endings on checkout.
-*.c	text
-*.h	text
-*.cpp	text
+# Auto detect text files and perform LF normalization
+* text=auto eol=lf
+
 *.cs	text diff=csharp
-*.lua	text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln	text eol=crlf
